--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
             </div>
 
             <div class="input-wrap">
-              <label for="mail">Почта</label>
-              <input type="email" name="mail" id="mail" class="modal-form-inputs" />
+              <label for="email">Почта</label>
+              <input type="email" name="mail" id="email" class="modal-form-inputs" />
               <svg class="icon-input" height="32" width="32">
                 <use href="./images/symbol-defs.svg#icon-mail"></use>
               </svg>
@@ -508,7 +508,7 @@
             <input type="email" name="mail" id="mail" placeholder="E-mail" />
             <button type="submit" class="input-btn">
               Подписаться
-              <svg class="input-btn-icon" height="24" weight="24">
+              <svg class="input-btn-icon" height="24" width="24">
                 <use href="./images/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
