--- a/index.html
+++ b/index.html
@@ -391,27 +391,33 @@
             <p>Оставьте свои данные, мы вам перезвоним</p>
 
             <div class="input-wrap">
-              <label for="user-name">Имя</label>
-              <input type="text" name="user-name" id="user-name" class="modal-form-inputs" />
-              <svg class="icon-input" height="32" width="32">
-                <use href="./images/symbol-defs.svg#icon-name"></use>
-              </svg>
+              <label for="user-name" class="modal-label">Имя</label>
+              <div class="input-icon-wrap">
+                <input type="text" name="user-name" id="user-name" class="modal-form-inputs" />
+                <svg class="icon-input" height="32" width="32">
+                  <use href="./images/symbol-defs.svg#icon-name"></use>
+                </svg>
+              </div>
             </div>
 
             <div class="input-wrap">
-              <label for="telephone">Телефон</label>
-              <input type="tel" name="telephone" id="telephone" class="modal-form-inputs" />
-              <svg class="icon-input" height="32" width="32">
-                <use href="./images/symbol-defs.svg#icon-phone"></use>
-              </svg>
+              <label for="telephone" class="modal-label">Телефон</label>
+              <div class="input-icon-wrap">
+                <input type="tel" name="telephone" id="telephone" class="modal-form-inputs" />
+                <svg class="icon-input" height="32" width="32">
+                  <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+              </div>
             </div>
 
             <div class="input-wrap">
-              <label for="email">Почта</label>
-              <input type="email" name="mail" id="email" class="modal-form-inputs" />
-              <svg class="icon-input" height="32" width="32">
-                <use href="./images/symbol-defs.svg#icon-mail"></use>
-              </svg>
+              <label for="email" class="modal-label">Почта</label>
+              <div class="input-icon-wrap">
+                <input type="email" name="mail" id="email" class="modal-form-inputs" />
+                <svg class="icon-input" height="32" width="32">
+                  <use href="./images/symbol-defs.svg#icon-mail"></use>
+                </svg>
+              </div>
             </div>
 
             <div class="textarea-wrap">
@@ -419,11 +425,10 @@
               <textarea
                 name="comments"
                 id="comments"
-                rows="6"
+                rows="5"
                 placeholder="Введите текст"
-                class="modal-form-textarea modal-form-inputs"
-              >
-              </textarea>
+                class="modal-form-textarea"
+              ></textarea>
             </div>
 
             <div class="modal-checkbox-wrap">
