--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             </div>
 
             <div class="textarea-wrap">
-              <label for="comments">Комментарий</label>
+              <label for="comments" class="modal-label">Комментарий</label>
               <textarea
                 name="comments"
                 id="comments"
