--- a/portfolio.html
+++ b/portfolio.html
@@ -249,7 +249,7 @@
           </address>
         </div>
         <div class="soc-icon-wrap">
-          <h2 class="title-footer">присоединяйтесь</h2>
+          <p class="title-footer">присоединяйтесь</p>
           <ul class="team-soc-list list">
             <li class="team-soc-item">
               <a href="" class="team-soc-link link">
@@ -281,14 +281,14 @@
             </li>
           </ul>
         </div>
-        <form action="" class="input-footer">
+        <form class="input-footer">
           <h2 class="title-footer">Подпишитесь на рассылку</h2>
           <div class="input-footer-wrap">
-            <label for="mail" name="mail"></label>
+            <label for="mail"></label>
             <input type="email" name="mail" id="mail" placeholder="E-mail" />
-            <button type="submit">
+            <button type="submit" class="input-btn">
               Подписаться
-              <svg class="input-btn-icon" height="24" weight="24">
+              <svg class="input-btn-icon" height="24" width="24">
                 <use href="./images/symbol-defs.svg#icon-send"></use>
               </svg>
             </button>
