--- a/portfolio.html
+++ b/portfolio.html
@@ -282,7 +282,7 @@
           </ul>
         </div>
         <form class="input-footer">
-          <h2 class="title-footer">Подпишитесь на рассылку</h2>
+          <p class="title-footer">Подпишитесь на рассылку</p>
           <div class="input-footer-wrap">
             <label for="mail"></label>
             <input type="email" name="mail" id="mail" placeholder="E-mail" />
